Fixed wraps

--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -94,4 +94,9 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+  @media #{$desktop} {
+    &--wrap {
+      padding: 0 40px;
+    }
+  }
 }
