--- a/sass/blocks/offer.scss
+++ b/sass/blocks/offer.scss
@@ -58,7 +58,7 @@
   }
   @media #{$tablet} {
     margin-top: 31px;
-    padding: 0 110px;
+    padding: 0 155px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
