--- a/sass/blocks/photo-reason.scss
+++ b/sass/blocks/photo-reason.scss
@@ -11,7 +11,7 @@
   width: 100%;
   @media #{$tablet} {
     width: 66.6667%;
-    height: 257px;
+    height: 256px;
     overflow: hidden;
   }
 }
